--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -12,8 +12,8 @@ CONFIG_PMW3610_CPI=700
 # トラックボールの感度設定（値が高いほど感度が高くなる）
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_180=y
-# CONFIG_PMW3610_SNIPE_CPI=400
-# CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
+CONFIG_PMW3610_SNIPE_CPI=400
+CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
 CONFIG_PMW3610_SCROLL_TICK=20
 CONFIG_PMW3610_INVERT_X=n
 CONFIG_PMW3610_INVERT_SCROLL_X=y
